fix spacing between nav and components

--- a/src/sass/components/EditsTable.scss
+++ b/src/sass/components/EditsTable.scss
@@ -1,8 +1,5 @@
 .EditsContainerEntry {
   margin-bottom: 3em;
-  &:first-child {
-    margin-top: 3em;
-  }
 
   hr {
     margin-top: 3em;
